removed type attr in <script>; not needed.

--- a/src/web/alpha/home.html
+++ b/src/web/alpha/home.html
@@ -40,9 +40,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="js/kjs.js"></script>
-<script type="text/javascript">
-
+<script src="js/kjs.js"></script>
+<script>
 function updateTaskTable(records) {    
     var N = records.length;
     for (var i=0; i < N; i++) {
